# ev-manhattan

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
data/processed/: chargers.parquet  edges.parquet  instance_2025-07-15.json  nodes.parquet  nyiso_zone_j_2025_07.parquet
data/sample/: README.md  sample_instance_seed_7.json  sample_prices_seed_7.csv
docs/: browser-ui.md  data.md  planner.md  setup.md  testing.md  troubleshooting.md
src/: build_graph.py  build_instance.py  fetch_nyiso.py  fetch_ocm.py  fetch_osm.py  map_single.py  power_test.py  quick_force_charge.py  test_single_vehicle.py  test_summarize.py
src/data/: build_instance.py  fetch_ocm.py  sample_scenario.py
src/energy/: __init__.py
src/eval/: metrics.py  summarize.py
src/experiments/: __init__.py  plan_day.py  queues.py  run_plan_day.py
src/graph/: __init__.py  build_graph.py  fetch_osm.py  time_dependent.py  traffic.py  travel.py
src/metrics/: energy.py  time_dependent.py  travel.py
src/pricing/: __init__.py  nyiso.py
src/run/: plan_day.py  run_plan_day.py  web_app.py
src/sim/: queues.py  traffic.py
src/solver/: __init__.py  (+3 more)
tests/: test_charger_filtering.py  test_energy_model.py  test_evaluation_metrics.py  test_nyiso_prices.py  test_performance.py  test_planner_constraints.py  test_planner_greedy_recharge.py  test_price_fallback_messages.py  test_queues.py  test_route_customer_counts.py  test_route_optimizer.py  test_sample_scenario.py  test_summarize.py  test_time_dependent_matrix.py  test_web_summary.py
(+7 files in other folders)
